<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_ros_sandbox</name>
  <version>0.0.2</version>
  <description>Extension to launch_ros to provide the ability to run nodes in sandboxed environments.</description>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>Apache 2.0</license>

  <depend>python3-docker</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <!-- TODO: uncomment this once ament_mypy has been released. At that time, also update test_mypy.py -->
  <!-- <test_depend>ament_mypy</test_depend> -->
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
